[package]
name = "symflow"
version = "0.1.0"
authors = ["Laurenz <laurmaedje@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
lazy_static = "1"
lde = "0.3"
z3 = { git = "https://github.com/laurmaedje/z3.rs" }

[features]
timings = []

[[bench]]
name = "times"
harness = false
required-features = ["timings"]
